corrected labels in dockerfile, it helps to save changes to files so that the file recognizes changes...

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,10 @@
-plexapi
-configparser
-numpy
-pillow
-imagehash
-schedule
-flask
-flask_script
-flask_sqlalchemy
-bootstrap-flask
-flask_apscheduler
-flask_wtf
-wtforms
-#tmdbv3api
-#gunicorn
-pymediainfo
-tautulli
-croniter
-opencv-python-headless
-flask_paginate
-gunicorn
+Flask>=2.3.3
+Werkzeug>=2.3.7
+requests>=2.31.0
+python-dotenv>=1.0.0
+gunicorn>=21.2.0
+pymongo>=4.6.1
+redis>=5.0.1
+celery>=5.3.6
+SQLAlchemy>=2.0.23
+psycopg2-binary>=2.9.9
