--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,38 +1,50 @@
-name: Docker Build/Publish Image 
+name: Docker Image CI
 
 on:
   push:
-    branches: [ master,dev,alpha ]
+    branches: [ master ]
+    tags:
+      - 'v*'
+  pull_request:
+    branches: [ master ]
 
-jobs:   
-  build:    
-    runs-on: ubuntu-22.04    
-    env:      
-      DOCKER_REGISTRY: hub.docker.com
-      DOCKER_IMAGE: jkirkcaldy/plex-utills      
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}               
-    steps:    
-    - name: Checkout the code       
-      uses: actions/checkout@v2
+jobs:
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
     - name: Login to DockerHub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Extract metadata (tags, labels) for Docker
       id: meta
-      uses: docker/metadata-action@v3
+      uses: docker/metadata-action@v5
       with:
         images: jkirkcaldy/plex-utills
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
 
-    - name: build and push
-      uses: docker/build-push-action@v2
+    - name: Build and push
+      uses: docker/build-push-action@v5
       with:
         context: .
-        push: true
-        tags: |
-          ${{ steps.meta.outputs.tags }}
+        platforms: linux/amd64,linux/arm64
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
