updated requirements and routes

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ SQLAlchemy>=2.0.23
 psycopg2-binary>=2.9.9
 flask-sqlalchemy>=3.0.0
 bootstrap-flask>=2.0.0
+flask-paginate
+plexapi>=4.15.4
+tzlocal
