reviewed all dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ bootstrap-flask>=2.0.0
 flask-paginate
 plexapi>=4.15.4
 tzlocal
+Pillow>=10.1.0
+opencv-python>=4.8.1
+imagehash>=4.3.1
+pymediainfo>=6.1.0
+python-tautulli>=0.1.0
